--- a/report_pos/views/pos_order_report_action.xml
+++ b/report_pos/views/pos_order_report_action.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-   <data>
-   <!--     <record id="action_report_pos_order" model="ir.actions.report">
-            <field name="name">POS Order Report</field>
+    <data>
+        <record id="view_order_form" model="ir.ui.view">
+            <field name="name">pos.order.form</field>
             <field name="model">pos.order</field>
-            <field name="report_name">report_pos.report_pos_order_template</field>
-            <field name="report_type">qweb-pdf</field>
-            <field name="binding_model_id" ref="point_of_sale.model_pos_order"/>
-        </record>-->
-        
+            <field name="inherit_id" ref="point_of_sale.view_pos_pos_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//header" position="inside">
+                    <button name="button_send_email" string="Mandar por correo electrónico" type="object" class="oe_highlight"/>
+                </xpath>
+            </field>
+        </record>
     </data>
 </odoo>
